Kubernetes/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    deployment.kubernetes.io/revision: '8'
  name: laravel-vue
  #namespace: ahmed
  labels:
    layer: laravel
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      layer: laravel
      tier: backend
  template:
    metadata:
      labels:
        layer: laravel
        tier: backend
    spec:
      volumes:
        # Laravel Source Code Volume
        - name: laravel-volume
          persistentVolumeClaim:
            claimName: laravel-pvc
        - name: app
          emptyDir:
      containers:
        # Laravel Containers
        - name: laravel
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: laravel-volume
              mountPath: /var/www/storage
              subPath: storage
          image: 'docker.io/ahmademje/php-oci8'
      imagePullSecrets:
        - name: ahmad-pull-secret
