Kubernetes/laravel-nginx-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    deployment.kubernetes.io/revision: '8'
  name: laravel-in-kubernetes-fpm
  namespace: ahmed
  labels:
    layer: laravel
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      layer: laravel
      tier: backend
  template:
    metadata:
      labels:
        layer: laravel
        tier: backend
    spec:
      volumes:
        # Laravel Source Code Volume
        - name: laravel-app-pvc
          persistentVolumeClaim:
            claimName: laravel-pvc
        # Nginx Configuration Volume
        - name: config
          configMap:
            name: nginx-config
            items:
            - key: config
              path: site.conf
      containers:
        # Laravel Containers
        - name: laravel
          ports:
            - containerPort: 9000
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: laravel-app-pvc
              mountPath: /app
          image: 'registry.i-3.my.id:5000/repository/docker-internal/ahmad/laravel'
        # Nginx Container
        - name: nginx
          image: nginx
          volumeMounts:
          - name: laravel-app-pvc
            mountPath: /app
          - name: config
            mountPath: /etc/nginx/conf.d
          ports:
          - containerPort: 80
            name: http
            protocol: TCP
      imagePullSecrets:
        - name: lab-nexus-ahmad
