Kubernetes/laravel_deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    deployment.kubernetes.io/revision: '8'
  name: laravel-in-kubernetes-fpm
  namespace: ahmed
  labels:
    layer: laravel
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      layer: laravel
      tier: backend
  template:
    metadata:
      labels:
        layer: laravel
        tier: backend
    spec:
      volumes:
        - name: laravel-app-pvc
          persistentVolumeClaim:
            claimName: laravel-pvc
      containers:
        - name: laravel
          ports:
            - containerPort: 9000
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: laravel-app-pvc
              mountPath: /var/www/
          image: 'registry.i-3.my.id:5000/repository/docker-internal/ahmad/laravel'
      imagePullSecrets:
        - name: lab-nexus-ahmad
