Kubernetes/laravel_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-app
  labels:
    tier: backend
spec:
  selector:
    layer: laravel
    tier: backend
  ports:
    - protocol: TCP
      port: 9000
