Kubernetes/nginx_svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: laravel
  labels:
    tier: backend
    layer: laravel
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      #nodePort: 32380
  selector:
    tier: backend
    layer: laravel
  type: NodePort
