Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel-ingress
  annotations:
   ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: laravel-gce.ahmad.com
    http:
     paths:
     -  pathType: Prefix
        path: /
        backend:
          service:
            name: laravel
            port: 
              number: 8080
